...
                android:layout_marginStart="@dimen/small"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginTop="@dimen/very_small"
                android:layout_marginBottom="@dimen/very_small">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large"
                    android:layout_marginEnd="@dimen/large"
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginBottom="@dimen/small"
...
                            android:drawableTint="?android:attr/icon"
                            android:textColor="?android:attr/textColor"
                            android:textSize="@dimen/medium_text"
                            android:text="@string/developer_title" />

                        <TextView
                            android:id="@+id/developer_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small"
                            android:layout_marginBottom="@dimen/slightly_medium"
                            android:layout_marginStart="@dimen/slightly_small"
                            android:layout_marginEnd="@dimen/extra_medium"
...
                            android:drawablePadding="@dimen/small"
                            android:textColor="?android:attr/textColor"
                            android:textSize="@dimen/medium_text"
                            android:text="@string/publisher_title" />

                        <TextView
                            android:id="@+id/publisher_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_marginStart="@dimen/slightly_small"
                            android:layout_marginEnd="@dimen/extra_medium"
                            android:layout_marginTop="@dimen/small"
...
