...
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginStart="@dimen/small"
                    android:layout_marginEnd="@dimen/small"
                    android:layout_marginBottom="@dimen/small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@{viewModel.selectedGame.title ?? @string/empty}"
                        android:backgroundTint="?attr/colorSurface"
                        android:hint="@string/game_title_hint"
...
                        android:layout_marginTop="@dimen/very_small"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small"
                        android:layout_marginBottom="@dimen/small">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/developer_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@{viewModel.selectedGame.developers ?? @string/empty}"
                            android:backgroundTint="?attr/colorSurface"
                            android:hint="@string/game_developer_hint"
...
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small"
                        android:layout_marginBottom="@dimen/small"
                        android:layout_marginTop="@dimen/small">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/publisher_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@{viewModel.selectedGame.publishers ?? @string/empty}"
                            android:backgroundTint="?attr/colorSurface"
                            android:hint="@string/game_publisher_hint"
...
