<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_search"
        android:title="@string/menu_search_title"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/menu_add"
        android:title="@string/menu_add_title"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>